tests/ui/parse_expr.stderr
error: expected expression, found `~`
  --> $DIR/parse_expr.rs:13:19
   |
13 |     json!({ "a" : ~ });
   |                   ^

